# deep-cam

./: .gitignore  benchmark_model.py  benchmark_processor.py  main.py  pyproject.toml  requirements-client.txt  requirements-server.txt  run.sh  run_client.py  run_client.sh  run_client_camera.py  run_client_ffmpeg.py  run_client_gstreamer.py  run_client_sim.sh  run_server.py  run_server.sh  test.py
deep_cam/: capture.py  face_analyzer.py  processor.py
deep_cam/utils/: camera.py
models/: instructions.txt
src/deep_cam/: capture.py  cluster_analysis.py  face_analyzer.py  processor.py  types.py
