[project]
name = "deep-cam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["opencv-python>=4.12.0.88"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
client = [
    "opencv-python>=4.12.0.88",
    "pygrabber>=0.2",
]

server = [
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "onnxruntime>=1.22.1",
    "scikit-learn>=1.7.1",
    "gfpgan>=1.3.8",
    "insightface>=0.7.3",
]
